fix: chamadas align

--- a/no-panic/src/app/page.module.css
+++ b/no-panic/src/app/page.module.css
@@ -64,6 +64,7 @@
       display: flex;
       gap: 1rem;
       flex-wrap: wrap;
+      justify-content: center;
 
       .chamada {
         display: flex;
